Sun Sep 13 12:36:40 2020  Tom Hughes  <tom@compton.nu>

        * Zlib.pm
          Change version number to 1.11.

        * Makefile.PL
          Add links to repository and bug tracker.

        * Zlib.pm
        * Makefile.PL
        * t/basic.t
        * t/external.t
        * t/getc.t
        * t/getline.t
        * t/import.t
        * t/large.t
        * t/tied.t
        * t/uncomp1.t
        * t/uncomp2.t
          Enable strict mode and warnings throughout.

Tue Jul 14 22:29:01 2009  Tom Hughes  <tom@compton.nu>

        * Zlib.pm
          Change version number to 1.10.

        * Zlib.pm
        * Makefile.PL
          Require Compress::Zlib 2.000 or later.

Thu Jan  3 18:35:44 2008  Tom Hughes  <tom@compton.nu>

        * Zlib.pm
          Changed version number to 1.09.

        * Makefile.PL
          Install in the core library directory if the perl
          version is 5.9.3 or later.

Sun Nov 18 17:43:49 2007  Tom Hughes  <tom@compton.nu>

        * Zlib.pm
          Changed version number to 1.08.

        * t/uncomp1.t
        * t/uncomp2.t
          Add the PID to the name of the temporary file used by
          several tests to avoid clashing with the directory
          called test in the perl source tree.

        * Zlib.pm
          Require perl 5.006 instead of 5.004 as Fcntl does not
          implement SEEK_SET before then.

        * Zlib.pm
          Removed "IO::Zlib::WRITE: OFFSET is not supported" error
          from documentation as it is no longer generated.

2007-07-28 Tom Hughes <tom@compton.nu>

        * Zlib.pm
          Changed version number to 1.07.

        * MANIFEST
        * t/0signature.t
          Removed signature test.

2007-07-18 Tom Hughes <tom@compton.nu>

        * Zlib.pm
          Changed version number to 1.06.

        * t/external.t
          Exit immediately if there is no gzip program.

2007-03-04  Tom Hughes <tom@compton.nu>

        * Zlib.pm
          Changed version number to 1.05.
